Text Decoration Underline not working on safari fix

--- a/Frontend/src/css/itemdetail.css
+++ b/Frontend/src/css/itemdetail.css
@@ -78,14 +78,15 @@ h3{
     margin-bottom: 0px;
 }
 .item-detail-name{
-
+    text-decoration: underline #8dc572 10px  !important;
+}
+.item-detail-name h1{
     text-decoration: underline #8dc572 10px  !important;
 }
 
 .item-detail-user{
     font-size: 2rem;
-    text-decoration: underline #222 4px  !important;
-    
+    text-decoration: underline #222 4px  !important; 
 }
 
 .location-map h1{
@@ -150,13 +151,12 @@ h3{
     width: 55%;
 }
 .item-desc-cnt{border-radius: 6px;}
+
 @media (prefers-color-scheme: dark) {
 .item-desc-cnt{
     border: 2px solid #fff;
 }
 }
-
-/* Add these styles to your CSS file */
 
 .slider-container {
     margin: 10px 0;
@@ -242,8 +242,6 @@ h3{
         border-bottom: none;
     }
 
-   
-    
     .additional-images{
         grid-template-rows: unset;
         grid-template-columns: repeat(5,90px);
@@ -279,17 +277,17 @@ h3{
     }
 
     .meta-details{
-  
         justify-content: center;
         background-color: #1c1c1c;
         border-bottom: 20px solid #1c1c1c;
         display: flex;
         gap: 30px;
     }
-    .detail-contact{display: flex;
+    .detail-contact{
+        display: flex;
         flex-direction: column;
         justify-content: center;
-       justify-items: center;
+        justify-items: center;
      
      
 
